Actually fixed overflow issue

--- a/src/styles/Theme.css
+++ b/src/styles/Theme.css
@@ -2,14 +2,15 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    position: relative;
     height: auto;
+    position: relative;
     overflow-x: hidden;
 };
   
 .main {
-    width: 100%;
+    width: 100vw;
     height: 100%;
+    position: relative;
     overflow-x: hidden;
 }
   
